<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Happy Brightday Everybody</string>
    <string name="action_settings"></string>
    <string name="manual">Manual</string>
    <string name="agenda">Phone Book</string>
    <string name="title_activity_contactos">Phone Book</string>
    <string name="title_activity_agregar"></string>
    <string name="tituloAgregar">Add a Phone Book  :</string>
    <string name="nombre">Name</string>
    <string name="cumple">Date</string>
    <string name="tlf">Phone Number</string>
    <string name="fac">Facebook</string>
    <string name="twi">Twitter</string>
    <string name="email">Email</string>
    <string name="title_activity_autosms_user"></string>
    <string name="infoAutosms">Here you can choose the destination message platadorma</string>
    <string name="sms">Sms</string>
    <string name="what">Whatsapp</string>
    <string name="mensaje">Menssage :</string>
    <string name="guardar">Save</string>
    <string name="hora">Time</string>
    <string name="action_new">Add new a Phone Book </string>
    <string name="title_activity_agregar_user"></string>
    <string name="title_activity_busqueda">Phone Book</string>
    <string name="title_activity_cuenta_facebook">CuentaFacebook</string>
    <string name="title_activity_auto_mensaje"></string>
    <string name="title_activity_cuenta_twitter">CuentaTwitter</string>
    <string name="title_activity_galeria"></string>
    <string name="title_activity_main"></string>
    <string name="title_activity_calendar2">Calendar</string>
    <string name="title_activity_sonido"></string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">1442697822637191</string>
    <string name="exception">Exception: %1$s</string>
    <string name="title_activity_acerca_de_version">AcercaDeVersion</string>
    <color name="text_color">#31D1F1</color>
	<color name="white">#ffffff</color>
	<string name="open">Open</string>

</resources>
