<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DDFFFE"
    tools:context="com.pablo.felicitacumple.AgregarUser"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloAgregar"
                android:textColor="#F59250"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/nombre"
                    android:textColor="#F59250"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:selectAllOnFocus="true"
                    android:background="#CFD2D5"
                    android:fontFamily="Comic Sans"
                    android:hint="Enter here name"
                    android:inputType="textPersonName" >
                </EditText>
            </LinearLayout>
         
            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cumple"
                    android:textColor="#F59250"
                    android:textStyle="bold" />

                <DatePicker android:id="@+id/datePicker1"
                            android:layout_width="wrap_content"
                            android:layout_height="142dp"
                            android:calendarViewShown="false"
                            android:layout_gravity="center_horizontal"/>
            

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/hora"
                android:textColor="#F59250"
                android:textStyle="bold" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="match_parent"
                android:layout_height="142dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tlf"
                    android:textColor="#F59250"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:selectAllOnFocus="true"
                    android:background="#CFD2D5"
                    android:hint="Enter here number phone"
                    android:fontFamily="Comic Sans"
                    android:inputType="phone"
                    android:padding="4dp" />
                
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/email"
                        android:textColor="#F59250"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="#CFD2D5"
                        android:selectAllOnFocus="true"
                        android:fontFamily="Comic Sans"
                        android:inputType="textEmailAddress"
                        android:hint="Enter here email"
                        android:padding="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/fac"
                        android:textColor="#F59250"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="facebook"
                        android:background="#6EABEC"
                        android:layout_margin="4dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:text="List Piker Friends " />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/twi"
                        android:textColor="#F59250"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="twitter"
                        android:textColor="#FFFFFF"
                        android:layout_margin="4dp"
                        android:textStyle="bold"
                        android:background="#6EABEC"
                        android:text="List Piker Friends " />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/autosms"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:paddingLeft="15dp" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="#FFE8BC"
                        android:onClick="autosms"
                        android:textColor="#71D994"
                        android:text="AutoSMS"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/alarma"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:paddingLeft="15dp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="alarma"
                        android:background="#FFE8BC"
                        android:text="Alarm"
                        android:textColor="#71D994"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:onClick="galeria"
                    android:textColor="#FF6B5A"
                    android:background="#E7D4E2"
                    android:text="Picture gallery"
                    android:textStyle="bold" />

            
        </LinearLayout>
    </ScrollView>
    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
</LinearLayout>

